# paperplane

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md
rust-core/: Cargo.toml  tauri.conf.json
rust-core/icons/: icon.icns
rust-core/src/: lib.rs  main.rs
rust-core/src/commands/: mod.rs
rust-core/src/models/: mod.rs
